# erased-serde

./: Cargo.toml  build.rs
src/: any.rs  de.rs  error.rs  lib.rs  private.rs  ser.rs
